--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Toxumuharu Azure Dev Blog"
 description              : "Hello! I am Toxumuharu, I would keep what I have experienced here. Any Feedback is welcome:)"
-url                      : "https://toxumuharu.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://github.com/Toxumuharu/DevBlog" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : #/blog # the subpath of your site, e.g. "/blog"
-repository               : "Toxumuharu/toxumuharu.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "https://github.com/Toxumuharu/DevBlog" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -104,7 +104,7 @@ author:
     #   # url: "mailto:your.name@email.com"
     - label: "Website"
       # icon: "fas fa-fw fa-link"
-      url: "https://toxumuharu.github.io/"
+      url: "https://github.com/Toxumuharu/DevBlog"
     # - label: "Twitter"
     #   icon: "fab fa-fw fa-twitter-square"
     #   # url: "https://twitter.com/"
