update baseurl for re-mapping images

--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Toxumuharu Azure Dev Blog"
 description              : "Hello! I am Toxumuharu, I would keep what I have experienced here. Any Feedback is welcome:)"
-url                      : "https://github.com/Toxumuharu/DevBlog" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : #/blog # the subpath of your site, e.g. "/blog"
+url                      : "https://toxumuharu.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : /DevBlog # the subpath of your site, e.g. "/blog"
 repository               : "https://github.com/Toxumuharu/DevBlog" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
